styles.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Lato:wght@400;700&display=swap');

:root {
    /* -- COLORS -- */
    --background-color: #14191f;
    --border-color: #2b3540;
    --container-color: #14191f;
    --skill-tag-color: #2b3540;

    --primary-text-color: #ffffff;
    --secondary-text-color: #9dadbe;
  
    /* -- FONTS -- */
    --primary-font: 'Inter', 'Raleway', sans-serif;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: var(--primary-font);
    background-color: var(--background-color);
    color: var(--primary-text-color);
    font-size: 16px;
    line-height: 1.5;
}

h2 {
    font-size: 22px;
    font-weight: 600;
    letter-spacing: -0.015em;
    padding-bottom: 1rem;
}

h3 {
    font-size: 18px;
    font-weight: 500;
    letter-spacing: -0.015em;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
}

a {
    color: var(--primary-text-color);
    text-decoration: none;
    transition: color 0.3s ease;
}

a:hover {
    color: var(--secondary-text-color);
}

section {
      padding: 1rem 1.5rem;
}

.portfolio-container {
    width: 100%;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

.main-content {
    width: 100%;
    max-width: 960px;
    margin: 0 auto; 
    padding: 1.25rem 0;
}


/* ----- HEADER ----- */
.site-header {
    font-family: var(--primary-font);
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0.3rem 2.25rem;
    border-bottom: 1px solid var(--border-color);
    width: 100%;
    background-color: var(--background-color);
    position: sticky;
    top: 0;
    z-index: 1000;
}

.logo-container {
    display: flex;
    align-items: center;
    gap: 1rem;
}

.logo-icon {
    width: 1rem;
    height: 1.35rem;
    padding-bottom: 0.35rem;
}

.logo-title {
    align-items: center;
    font-size: 18px;
    font-weight: 500;
    letter-spacing: -.015em;
    padding-bottom: 0.3rem;
    line-height: 1;
}

.header-right {
    display: flex;
    align-items: center;
    padding-bottom: 0.25rem;
    gap: 1.5rem;
}

.main-nav ul {
    display: flex;
    align-items: center;
    gap: 1.5rem;
    list-style: none;
}

.main-nav a {
    font-size: 14px;
    font-weight: 500;
    display: block;
    padding: 0.5rem 0.55rem;
}

.profile-picture-header {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    align-items: center;
    background-color: var(--border-color); 
    background-image: url('assets/pfp.jpg'); 
    background-size: cover;
    background-position: center;
}
/* ----- END HEADER ----- */


/* ----- MAIN ----- */
.main-content {
    padding-bottom: 3.5rem;
}
/* ----- END MAIN ----- */


/* ----- PROFILE SECTION ----- */

.profile-section {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    padding-bottom: 0.5rem;
    gap: 1rem;
}

.profile-picture-main {
    width: 128px;
    height: 128px;
    border-radius: 50%;
    background-color: var(--border-color);
    background-image: url('assets/pfp.jpg');
    background-size: cover;
    background-position: center;
}


.profile-name {
    font-family: var(--title-font);
    font-size: 22px;
    font-weight: 600;
    letter-spacing: -0.015em;
}

.profile-graduation,
.profile-university {
    color: var(--secondary-text-color);
}
/* ----- END PROFILE SECTION ----- /*


/* ----- BIOGRAPHY SECTION ----- */
.biography-section p,
#competencies p {
    font-size: 14px;
    font-weight: 300;
    color: var(--primary-text-color);
}
/* ----- END BIOGRAPHY SECTION */


/* ----- SKILLS SECTION ----- */
.skills-container {
    display: flex;
    flex-wrap: wrap;
    gap: 0.75rem;
    padding: 0.75rem 0;
}

.skill-tag {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    background-color: var(--skill-tag-color);
    padding: 0 1rem;
    height: 32px;
    border-radius: 999px;
    font-size: 14px;
    font-weight: 400;
}
/* ----- END SKILLS SECTION ----- */


/* ----- PROJECTS SECTION ----- */
#projects article {
    margin-bottom: 2rem;
}

.project-card {
    display: flex;
    align-items: stretch;
    justify-content: space-between;
    gap: 1rem;
}

.project-info {
    flex: 2;
    display: flex;
    flex-direction: column;
    justify-content: baseline;
}

.project-title {
    font-size: 16px;
    font-weight: 600;
}

.project-description {
    font-size: 14px;
    color: var(--secondary-text-color);
}

.project-image {
    flex: 1;
    aspect-ratio: 16 / 9;
    border-radius: 12px;
    background-color: var(--border-color);
    background-size: cover;
    background-position: center;
}

/* -- Project images -- */
#projects article:nth-of-type(1) .project-image {
    background-image: url('https://i.pcmag.com/imagery/reviews/04qHO614ypU9ShCtnbBTpah-1..v1647977891.png');
}
#projects article:nth-of-type(2) .project-image {
    background-image: url('https://i.ytimg.com/vi/PUnA5tk0Ilw/maxresdefault.jpg')
}

/* ----- END PROJECTS SECTION ----- */


/* ----- EXPERIENCES SECTION ----- */
#experiences article {
    margin-bottom: 2rem;
}

.experience-card {
    display: flex;
    align-items: stretch;
    justify-content: space-between;
    gap: 1rem;
}

.experience-info {
    align-items: baseline;
}

.experience-title {
    font-size: 16px;
    font-weight: 400;
}

.experience-description, .experience-date {
    font-size: 14px;
    color: var(--secondary-text-color);

}
/* ----- END EXPERIENCES SECTION ----- */


/* ----- FOOTER ----- */
.site-footer {
    display: flex;
    flex-direction: column;
    align-items: center;
    font-family: var(--primary-font);
    font-size: 16px;
    font-weight: 300;
    color: var(--secondary-text-color);
    padding-top: 1.5rem;
    padding-bottom: 2rem;
    border-top: 1px solid var(--border-color);
}

.footer-content {
    text-align: center;
}

.network-icons {
    display: inline-flex;
    gap: 1rem;
}

.network-icons svg {
    height: 24px;
    width: 24px;
    fill: var(--secondary-text-color);
}

.network-icons svg:hover{
    fill: var(--border-color);
}

/* ----- END FOOTER ----- */

